crates/xlate/tests/snapshots/golden_matrix__chat__reason_effort_high__o4-mini__20260910__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Prove there are infinitely many primes in two lines."
        }
      ]
    }
  ],
  "reasoning": {
    "effort": "high",
    "summary": "auto"
  },
  "max_output_tokens": 256
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
